force-app/main/default/objects/Opportunity/fields/Status__c.field-meta.xml
<CustomField>
    <fullName>Status__c</fullName>
    <label>Status</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Demo</fullName>
            </value>
            <value>
                <fullName>Waiting for Response</fullName>
            </value>
            <value>
                <fullName>Account Setup</fullName>
            </value>
            <value>
                <fullName>Ready to On-board</fullName>
            </value>
            <value>
                <fullName>On-boarded</fullName>
            </value>
            <value>
                <fullName>Show Stopper</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>