force-app/main/default/objects/Opportunity/fields/Status_GPP__c.field-meta.xml
<CustomField>
    <fullName>Status_GPP__c</fullName>
    <label>Status of Global Presle</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>RFP expected</fullName>
            </value>
            <value>
                <fullName>To be signed this Q</fullName>
            </value>
            <value>
                <fullName>To be signed later</fullName>
            </value>
            <value>
                <fullName>Unknown</fullName>
            </value>
            <value>
                <fullName>Client won</fullName>
            </value>
            <value>
                <fullName>Implementation</fullName>
            </value>
            <value>
                <fullName>Ramp-Up</fullName>
            </value>
            <value>
                <fullName>Client lost</fullName>
            </value>
            <value>
                <fullName>Done/Live</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>