force-app/main/default/objects/Opportunity/fields/Technical_Sales_Barriers__c.field-meta.xml
<CustomField>
    <fullName>Technical_Sales_Barriers__c</fullName>
    <label>Technical Sales Barriers</label>
    <length>1000</length>
    <type>LongTextArea</type>
</CustomField>