force-app/main/default/objects/Opportunity/fields/Upsell_Amount__c.field-meta.xml
<CustomField>
    <fullName>Upsell_Amount__c</fullName>
    <formula>Amount - Parent_Opportunity__r.Amount</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Upsell Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>