force-app/main/default/objects/Opportunity/recordTypes/Advertiser_Initial.recordType-meta.xml
<RecordType>
    <fullName>Advertiser_Initial</fullName>
    <active>true</active>
    <businessProcess>Advertiser</businessProcess>
    <description>New client</description>
    <label>Advertiser initial</label>
</RecordType>