force-app/main/default/objects/Opportunity/recordTypes/Advertiser_renewal.recordType-meta.xml
<RecordType>
    <fullName>Advertiser_renewal</fullName>
    <active>true</active>
    <businessProcess>Advertiser</businessProcess>
    <description>Renewal of existing contract</description>
    <label>Advertiser renewal</label>
</RecordType>