force-app/main/default/objects/Opportunity/recordTypes/Advertiser_upsell.recordType-meta.xml
<RecordType>
    <fullName>Advertiser_upsell</fullName>
    <active>true</active>
    <businessProcess>Advertiser</businessProcess>
    <description>Addition of products to existing contract</description>
    <label>Advertiser upsell</label>
</RecordType>