force-app/main/default/objects/Opportunity/recordTypes/Agency_Initial.recordType-meta.xml
<RecordType>
    <fullName>Agency_Initial</fullName>
    <active>true</active>
    <businessProcess>Agency</businessProcess>
    <description>New client</description>
    <label>Agency initial</label>
</RecordType>