force-app/main/default/objects/Opportunity/recordTypes/Agency_renewal.recordType-meta.xml
<RecordType>
    <fullName>Agency_renewal</fullName>
    <active>true</active>
    <businessProcess>Agency</businessProcess>
    <description>Renewal of existing contract</description>
    <label>Agency renewal</label>
</RecordType>