force-app/main/default/objects/Opportunity/recordTypes/Agency_upsell.recordType-meta.xml
<RecordType>
    <fullName>Agency_upsell</fullName>
    <active>true</active>
    <businessProcess>Agency</businessProcess>
    <description>Addition of products to existing contract</description>
    <label>Agency upsell</label>
</RecordType>