force-app/main/default/objects/Opportunity/recordTypes/Brand_Solutions_Initial.recordType-meta.xml
<RecordType>
    <fullName>Brand_Solutions_Initial</fullName>
    <active>true</active>
    <businessProcess>Brand Solutions</businessProcess>
    <description>For all Creative Solutions deals</description>
    <label>Creative Solutions initial</label>
</RecordType>