force-app/main/default/objects/Opportunity/recordTypes/Brand_Solutions_renewal.recordType-meta.xml
<RecordType>
    <fullName>Brand_Solutions_renewal</fullName>
    <active>false</active>
    <businessProcess>Brand Solutions</businessProcess>
    <description>Renewal/renegotiation of existing contract coming to end of term</description>
    <label>Creative Solutions renewal</label>
</RecordType>