force-app/main/default/objects/Opportunity/recordTypes/Brand_Solutions_upsell.recordType-meta.xml
<RecordType>
    <fullName>Brand_Solutions_upsell</fullName>
    <active>false</active>
    <businessProcess>Brand Solutions</businessProcess>
    <description>Upsell and addition of products or services to an existing contract</description>
    <label>Creative Solutions upsell</label>
</RecordType>