force-app/main/default/objects/Opportunity/recordTypes/IO_Initial.recordType-meta.xml
<RecordType>
    <fullName>IO_Initial</fullName>
    <active>true</active>
    <businessProcess>Adform Non-Renewal - PreApproval</businessProcess>
    <description>Used for the initial IO transaction on an Account. Fields will include IO related details.</description>
    <label>IO Initial</label>
</RecordType>