force-app/main/default/objects/Opportunity/recordTypes/IO_Initial_Approved.recordType-meta.xml
<RecordType>
    <fullName>IO_Initial_Approved</fullName>
    <active>true</active>
    <businessProcess>Adform Non-Renewal - Approved</businessProcess>
    <description>Used for Initial Approved</description>
    <label>IO Initial - Approved</label>
</RecordType>