force-app/main/default/objects/Opportunity/recordTypes/IO_Renewal.recordType-meta.xml
<RecordType>
    <fullName>IO_Renewal</fullName>
    <active>true</active>
    <businessProcess>Adform Renewal - PreApproval</businessProcess>
    <description>Used for the Renewal IO transaction on an Account. Fields will link back to parent Opportunity and count renewal legacy steps. Launched with custom button.</description>
    <label>IO Renewal</label>
</RecordType>