force-app/main/default/objects/Opportunity/recordTypes/IO_Renewal_Approved.recordType-meta.xml
<RecordType>
    <fullName>IO_Renewal_Approved</fullName>
    <active>true</active>
    <businessProcess>Adform Renewal - Approved</businessProcess>
    <description>Used for Approved Renewal transactions</description>
    <label>IO Renewal - Approved</label>
</RecordType>