force-app/main/default/objects/Opportunity/recordTypes/IO_Upsell.recordType-meta.xml
<RecordType>
    <fullName>IO_Upsell</fullName>
    <active>true</active>
    <businessProcess>Adform Non-Renewal - PreApproval</businessProcess>
    <description>Used for the Upsell IO transaction on an Account. Fields will link back to parent Opportunity and show delta calculations from parent. Launched with custom button.</description>
    <label>IO Upsell</label>
</RecordType>