force-app/main/default/objects/Opportunity/recordTypes/IO_Upsell_Approved.recordType-meta.xml
<RecordType>
    <fullName>IO_Upsell_Approved</fullName>
    <active>true</active>
    <businessProcess>Adform Non-Renewal - Approved</businessProcess>
    <description>Used for Approved non-renewal up sell Opportunities</description>
    <label>IO Upsell - Approved</label>
</RecordType>