force-app/main/default/objects/Opportunity/recordTypes/MSA_Initial.recordType-meta.xml
<RecordType>
    <fullName>MSA_Initial</fullName>
    <active>true</active>
    <businessProcess>Adform Non-Renewal - PreApproval</businessProcess>
    <description>Used for the initial MSA transaction on an Account. Fields will include Contract related details.</description>
    <label>MSA Initial</label>
</RecordType>