force-app/main/default/objects/Opportunity/recordTypes/MSA_Initial_Approved.recordType-meta.xml
<RecordType>
    <fullName>MSA_Initial_Approved</fullName>
    <active>true</active>
    <businessProcess>Adform Non-Renewal - Approved</businessProcess>
    <description>Used for MSA Initial Approved</description>
    <label>MSA Initial - Approved</label>
</RecordType>