force-app/main/default/objects/Opportunity/recordTypes/MSA_Renewal.recordType-meta.xml
<RecordType>
    <fullName>MSA_Renewal</fullName>
    <active>true</active>
    <businessProcess>Adform Renewal - PreApproval</businessProcess>
    <description>Used for the Renewal MSA transaction on an Account. Fields will link back to parent Opportunity and count renewal legacy steps. Launched with custom button.</description>
    <label>MSA Renewal</label>
</RecordType>