force-app/main/default/objects/Opportunity/recordTypes/MSA_Renewal_Approved.recordType-meta.xml
<RecordType>
    <fullName>MSA_Renewal_Approved</fullName>
    <active>true</active>
    <businessProcess>Adform Renewal - Approved</businessProcess>
    <description>Used for MSA Renewals Approved</description>
    <label>MSA Renewal - Approved</label>
</RecordType>