force-app/main/default/objects/Opportunity/recordTypes/MSA_Upsell.recordType-meta.xml
<RecordType>
    <fullName>MSA_Upsell</fullName>
    <active>true</active>
    <businessProcess>Adform Non-Renewal - PreApproval</businessProcess>
    <description>Used for the Upsell MSA transaction on an Account. Fields will link back to parent Opportunity and show delta calculations from parent. Launched with custom button.</description>
    <label>MSA Upsell</label>
</RecordType>