force-app/main/default/objects/Opportunity/recordTypes/MSA_Upsell_Approved.recordType-meta.xml
<RecordType>
    <fullName>MSA_Upsell_Approved</fullName>
    <active>true</active>
    <businessProcess>Adform Non-Renewal - Approved</businessProcess>
    <description>Used for MSA Upsell Approved</description>
    <label>MSA Upsell - Approved</label>
</RecordType>