force-app/main/default/objects/Opportunity/recordTypes/PSA_Initial.recordType-meta.xml
<RecordType>
    <fullName>PSA_Initial</fullName>
    <active>true</active>
    <businessProcess>Adform Non-Renewal - PreApproval</businessProcess>
    <description>Used for PSA Initial - not Approved</description>
    <label>PSA Initial</label>
</RecordType>