force-app/main/default/objects/Opportunity/recordTypes/PSA_Initial_Approved.recordType-meta.xml
<RecordType>
    <fullName>PSA_Initial_Approved</fullName>
    <active>true</active>
    <businessProcess>Adform Non-Renewal - Approved</businessProcess>
    <description>Used for PSA Initial Approved</description>
    <label>PSA Initial - Approved</label>
</RecordType>