force-app/main/default/objects/Opportunity/recordTypes/PSA_Renewal.recordType-meta.xml
<RecordType>
    <fullName>PSA_Renewal</fullName>
    <active>true</active>
    <businessProcess>Adform Renewal - PreApproval</businessProcess>
    <description>Used for PSA Renewals pre approval</description>
    <label>PSA Renewal</label>
</RecordType>