force-app/main/default/objects/Opportunity/recordTypes/PSA_Renewal_Approved.recordType-meta.xml
<RecordType>
    <fullName>PSA_Renewal_Approved</fullName>
    <active>true</active>
    <businessProcess>Adform Renewal - Approved</businessProcess>
    <description>Used for PSA Renewals that have been approved</description>
    <label>PSA Renewal - Approved</label>
</RecordType>