force-app/main/default/objects/Opportunity/recordTypes/PSA_Upsell.recordType-meta.xml
<RecordType>
    <fullName>PSA_Upsell</fullName>
    <active>true</active>
    <businessProcess>Adform Non-Renewal - PreApproval</businessProcess>
    <description>Used for PSA Upsell opportunities Pre-approval</description>
    <label>PSA Upsell</label>
</RecordType>