force-app/main/default/objects/Opportunity/recordTypes/PSA_Upsell_Approved.recordType-meta.xml
<RecordType>
    <fullName>PSA_Upsell_Approved</fullName>
    <active>true</active>
    <businessProcess>Adform Non-Renewal - Approved</businessProcess>
    <description>Used for PSA Upsell opportunities Approved</description>
    <label>PSA Upsell - Approved</label>
</RecordType>