force-app/main/default/objects/Opportunity/recordTypes/Publisher_Initial.recordType-meta.xml
<RecordType>
    <fullName>Publisher_Initial</fullName>
    <active>true</active>
    <businessProcess>Publisher</businessProcess>
    <description>New client</description>
    <label>Publisher initial</label>
</RecordType>