force-app/main/default/objects/Opportunity/recordTypes/Publisher_renewal.recordType-meta.xml
<RecordType>
    <fullName>Publisher_renewal</fullName>
    <active>true</active>
    <businessProcess>Publisher</businessProcess>
    <description>Renewal of existing contract</description>
    <label>Publisher renewal</label>
</RecordType>