force-app/main/default/objects/Opportunity/recordTypes/Publisher_upsell.recordType-meta.xml
<RecordType>
    <fullName>Publisher_upsell</fullName>
    <active>true</active>
    <businessProcess>Publisher</businessProcess>
    <description>Addition of products to existing contract</description>
    <label>Publisher upsell</label>
</RecordType>