force-app/main/default/objects/Opportunity/recordTypes/TPSA_Initial.recordType-meta.xml
<RecordType>
    <fullName>TPSA_Initial</fullName>
    <active>true</active>
    <businessProcess>Adform Non-Renewal - Approved</businessProcess>
    <description>Trial Period service agreement</description>
    <label>TPSA Initial</label>
</RecordType>