force-app/main/default/objects/Opportunity/recordTypes/TSPA_Initial_Approved.recordType-meta.xml
<RecordType>
    <fullName>TSPA_Initial_Approved</fullName>
    <active>true</active>
    <businessProcess>Adform Non-Renewal - Approved</businessProcess>
    <description>Trial Period Service Agreement</description>
    <label>TSPA Initial- Approved</label>
</RecordType>