force-app/main/default/objects/Opportunity/validationRules/Check_for_Consultancy_Partner.validationRule-meta.xml
<ValidationRule>
    <fullName>Check_for_Consultancy_Partner</fullName>
    <active>true</active>
    <errorConditionFormula>AND(ISPICKVAL(LeadSource, &#39;Consultancy Partner&#39;), ISPICKVAL( Consultancy_Partner__c , &#39;&#39;))</errorConditionFormula>
    <errorDisplayField>Consultancy_Partner__c</errorDisplayField>
    <errorMessage>Consultancy Partner required</errorMessage>
</ValidationRule>