force-app/main/default/objects/Opportunity/validationRules/Other_selected_must_add_Closure_Note.validationRule-meta.xml
<ValidationRule>
    <fullName>Other_selected_must_add_Closure_Note</fullName>
    <active>true</active>
    <errorConditionFormula>AND (
OR (
ISPICKVAL(Reason_Won__c, &quot;Other&quot;),
ISPICKVAL(Reason_Lost__c, &quot;Other&quot;)),
ISBLANK(Closure_Notes__c))</errorConditionFormula>
    <errorMessage>Because Reason Lost is marked &quot;Other&quot;, must fill out Closure Notes  with &quot;Other&quot; reason</errorMessage>
</ValidationRule>